traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: not found: value get
       else if (get(Y)%2 == 0)
                ^TraversalZigZag:8: error: not found: value Y
       else if (get(Y)%2 == 0)
                    ^TraversalZigZag:9: error: not found: value get
           {setPos(get(X)+1,getY())}
                   ^TraversalZigZag:9: error: not found: value X
           {setPos(get(X)+1,getY())}
                       ^TraversalZigZag:11: error: not found: value get
           {setPos(get(X)-1,getY())}
                   ^TraversalZigZag:11: error: not found: value X
           {setPos(get(X)-1,getY())}
                       ^