traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var n = 0
  ecritMessage("0")
  while (!positionFinale())
      {if ((getX()==6)&&(getY()%2==0))
           {setPos(6,getY()+1)}
       else if ((getX()==0)&&(getY()%2==1))
           {setPos(0,getY()+1)}
       else if (get(Y)%2 == 0)
           {setPos(get(X)+1,getY())}
       else 
           {setPos(get(X)-1,getY())}
       
       n+=1;
       ecritMessage(n)
       
        
        
        
        
        
        
        
      }
}








def positionFinale():Boolean= {
  if ((getMondeHauteur()-1,getMondeLargeur()-1)==(getX(),getY()))
      {return(true);};
  return(false);}